[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/diablohumastudio/database_manager/ui/tables_editor/field_editor_row.gd" id="1"]

[node name="FieldEditorRow" type="HBoxContainer"]
script = ExtResource("1")

[node name="NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(45, 0)
text = "Name:"

[node name="FieldNameEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
size_flags_horizontal = 3
placeholder_text = "field_name"

[node name="TypeLabel" type="Label" parent="."]
custom_minimum_size = Vector2(40, 0)
text = "Type:"

[node name="FieldTypeOption" type="OptionButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)

[node name="InnerTypeContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(230, 0)

[node name="InnerTypeLabel" type="Label" parent="InnerTypeContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(22, 0)
text = "of"

[node name="InnerTypeOption" type="OptionButton" parent="InnerTypeContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(90, 0)

[node name="DictSepLabel" type="Label" parent="InnerTypeContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(15, 0)
text = "v"

[node name="DictValueOption" type="OptionButton" parent="InnerTypeContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(90, 0)

[node name="DefaultLabel" type="Label" parent="."]
custom_minimum_size = Vector2(55, 0)
text = "Default:"

[node name="DefaultValueContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
size_flags_horizontal = 3

[node name="RemoveBtn" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
text = "X"
